--- a/Forge.Web/package.json
+++ b/Forge.Web/package.json
@@ -3,13 +3,14 @@
   "version": "1.0.0",
   "description": "Design the rules, build the characters.",
   "main": "gulpfile.js",
-  "dependencies": {
-    "babel-preset-es2015": "^6.22.0",
-    "babel-preset-react": "^6.23.0",
-    "gulp": "^3.9.1"
-  },
   "devDependencies": {
-    "babel-preset-stage-2": "^6.22.0"
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-stage-2": "^6.24.1",
+    "babel-preset-react": "^6.23.0",
+    "gulp": "^3.9.1",
+    "gulp-babel": "^6.1.2",
+    "gulp-concat": "^2.6.1",
+    "gulp-plumber": "^1.1.0"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
