--- a/Forge.Data/Forge.Data.csproj
+++ b/Forge.Data/Forge.Data.csproj
@@ -53,6 +53,8 @@
     <Compile Include="Models\ControlModel.cs" />
     <Compile Include="Models\DefinitionModel.cs" />
     <Compile Include="Models\CoreModel.cs" />
+    <Compile Include="Models\DefinitionRuleModel.cs" />
+    <Compile Include="Models\DefinitionSettingValue.cs" />
     <Compile Include="Models\GameModel.cs" />
     <Compile Include="Models\GroupModel.cs" />
     <Compile Include="Models\GroupTypeModel.cs" />
