--- a/Forge.Web/Forge.Web.csproj
+++ b/Forge.Web/Forge.Web.csproj
@@ -236,13 +236,17 @@
     <Content Include="Scripts\Core\LifeCycle.js" />
     <Content Include="Scripts\Core\Reducer.js" />
     <Content Include="Scripts\Core\Utilities.js" />
-    <Content Include="Scripts\Designer\Components\Designer__Preview.jsx" />
-    <Content Include="Scripts\Designer\Components\Designer__Search.jsx" />
+    <Content Include="Scripts\Designer\Components\Edit\Designer__Definition.jsx" />
+    <Content Include="Scripts\Designer\Components\Edit\Designer__DefinitionSettings.jsx" />
+    <Content Include="Scripts\Designer\Components\Edit\Designer__DefinitionTags.jsx" />
+    <Content Include="Scripts\Designer\Components\Edit\Designer__Rule.jsx" />
+    <Content Include="Scripts\Designer\Components\Edit\Designer__Tag.jsx" />
+    <Content Include="Scripts\Designer\Components\Stage\Designer__Preview.jsx" />
+    <Content Include="Scripts\Designer\Components\Designer__Recent.jsx" />
     <Content Include="Scripts\Designer\Components\Designer__Dialogs.jsx" />
-    <Content Include="Scripts\Designer\Components\Edit\Definition.jsx" />
-    <Content Include="Scripts\Designer\Components\Edit\Definition__Settings.jsx" />
-    <Content Include="Scripts\Designer\Components\Edit\Rule.jsx" />
-    <Content Include="Scripts\Designer\Components\Edit\Tag.jsx" />
+    <Content Include="Scripts\Designer\Components\List\Designer__List.jsx" />
+    <Content Include="Scripts\Designer\Components\List\Designer__Search.jsx" />
+    <Content Include="Scripts\Designer\Components\List\Designer__Settings.jsx" />
     <Content Include="Scripts\Library\Components\Library_Filters.jsx" />
     <Content Include="Scripts\Library\Components\Library_Controls.jsx" />
     <Content Include="Scripts\Library\Components\Library_Summary.jsx" />
@@ -257,9 +261,7 @@
     <Content Include="Scripts\Core\Components\Definition.jsx" />
     <Content Include="Scripts\Core\Settings.js" />
     <Content Include="Scripts\Designer\Components\Designer.jsx" />
-    <Content Include="Scripts\Designer\Components\Designer__List.jsx" />
-    <Content Include="Scripts\Designer\Components\Designer__Menu.jsx" />
-    <Content Include="Scripts\Designer\Components\Edit\Definition__Tags.jsx" />
+    <Content Include="Scripts\Designer\Components\Stage\Designer__Menu.jsx" />
     <Content Include="Scripts\Designer\Actions.js" />
     <Content Include="Scripts\Designer\Reducer.js" />
     <Content Include="Scripts\Library\Components\Library.jsx" />
@@ -327,8 +329,7 @@
     <Content Include="Styles\Components\_designer.scss" />
     <Content Include="Scripts\Designer\Components\Designer__Tabs.jsx" />
     <Content Include="Scripts\Designer\Components\Designer__Summary.jsx" />
-    <Content Include="Scripts\Designer\Components\Designer__Stage.jsx" />
-    <Content Include="Scripts\Designer\Components\Designer__Settings.jsx" />
+    <Content Include="Scripts\Designer\Components\Stage\Designer__Stage.jsx" />
     <Content Include="Styles\Components\_fields.scss" />
     <None Include="Properties\PublishProfiles\verspyre.com - Web Deploy.pubxml" />
     <Content Include="Styles\Components\_banners.scss" />
