--- a/Forge.Data/Forge.Data.csproj
+++ b/Forge.Data/Forge.Data.csproj
@@ -49,6 +49,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Categories.cs" />
     <Compile Include="DataContext.cs" />
     <Compile Include="Models\ControlModel.cs" />
     <Compile Include="Models\LookupValues.cs" />
