--- a/Forge.Web/Forge.Web.csproj
+++ b/Forge.Web/Forge.Web.csproj
@@ -208,7 +208,6 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="Content\scripts.js" />
-    <Content Include="Content\tests.js" />
     <Content Include="gulpfile.js" />
     <Content Include="Scripts\Account\Components\Account.jsx" />
     <Content Include="Scripts\Builder\Actions.js" />
@@ -220,7 +219,7 @@
     <Content Include="Scripts\Common\Components\Tooltip.jsx" />
     <Content Include="Scripts\Core\Components\Controls\Dictionary.jsx" />
     <Content Include="Scripts\Core\Components\Controls\DefinitionSelect.jsx" />
-    <Content Include="Scripts\Designer\Components\Designer__Link.jsx" />
+    <Content Include="Scripts\Designer\Components\Stage\Designer__Link.jsx" />
     <Content Include="Scripts\Common\Components\Dialog.jsx" />
     <Content Include="Scripts\Common\Components\Expandable.jsx" />
     <Content Include="Scripts\Common\Components\Banner.jsx" />
@@ -236,13 +235,13 @@
     <Content Include="Scripts\Core\LifeCycle.js" />
     <Content Include="Scripts\Core\Reducer.js" />
     <Content Include="Scripts\Core\Utilities.js" />
-    <Content Include="Scripts\Designer\Components\Edit\Designer__Definition.jsx" />
-    <Content Include="Scripts\Designer\Components\Edit\Designer__DefinitionSettings.jsx" />
-    <Content Include="Scripts\Designer\Components\Edit\Designer__DefinitionTags.jsx" />
-    <Content Include="Scripts\Designer\Components\Edit\Designer__Rule.jsx" />
-    <Content Include="Scripts\Designer\Components\Edit\Designer__Tag.jsx" />
+    <Content Include="Scripts\Designer\Components\Stage\Edit\Designer__Definition.jsx" />
+    <Content Include="Scripts\Designer\Components\Stage\Edit\Designer__DefinitionSettings.jsx" />
+    <Content Include="Scripts\Designer\Components\Stage\Edit\Designer__DefinitionTags.jsx" />
+    <Content Include="Scripts\Designer\Components\Stage\Edit\Designer__Rule.jsx" />
+    <Content Include="Scripts\Designer\Components\Stage\Edit\Designer__Tag.jsx" />
     <Content Include="Scripts\Designer\Components\Stage\Designer__Preview.jsx" />
-    <Content Include="Scripts\Designer\Components\Designer__Recent.jsx" />
+    <Content Include="Scripts\Designer\Components\Stage\Designer__Recent.jsx" />
     <Content Include="Scripts\Designer\Components\Designer__Dialogs.jsx" />
     <Content Include="Scripts\Designer\Components\List\Designer__List.jsx" />
     <Content Include="Scripts\Designer\Components\List\Designer__Search.jsx" />
@@ -251,6 +250,7 @@
     <Content Include="Scripts\Library\Components\Library_Controls.jsx" />
     <Content Include="Scripts\Library\Components\Library_Summary.jsx" />
     <Content Include="Scripts\Library\Components\Library_List.jsx" />
+    <Content Include="serviceworker.js" />
     <Content Include="Scripts\Store.js" />
     <Content Include="Scripts\Common\Actions.js" />
     <Content Include="Scripts\Common\Reducer.js" />
@@ -272,11 +272,9 @@
     <Content Include="Scripts\Tests\Specs\DefinitionSpec.jsx" />
     <Content Include="Scripts\Vendor\enzyme-2.7.1.js" />
     <Content Include="Scripts\Vendor\jasmine.js" />
-    <Content Include="Scripts\Vendor\react-dom-15.0.1.js" />
     <Content Include="Scripts\Vendor\react-dom-15.3.2.js" />
     <Content Include="Scripts\Vendor\react-redux-4.4.5.js" />
     <Content Include="Scripts\Vendor\react-router.js" />
-    <Content Include="Scripts\Vendor\react-with-addons-0.15.1.js" />
     <Content Include="Scripts\Vendor\react-with-addons-15.3.2.js" />
     <Content Include="Scripts\Vendor\redux-3.6.0.js" />
     <Content Include="Scripts\Vendor\redux-debounced-0.3.0.js" />
@@ -288,7 +286,6 @@
     <Content Include="Scripts\Vendor\jquery-1.10.2.js" />
     <Content Include="Scripts\Vendor\moment.js" />
     <Content Include="Scripts\Vendor\pubsub.js" />
-    <Content Include="Scripts\Vendor\react-with-addons-0.13.3.js" />
     <Content Include="Styles\Fonts\fontawesome-webfont.svg" />
     <Content Include="Styles\site.css">
       <DependentUpon>site.scss</DependentUpon>
