--- a/Forge.Data/Forge.Data.csproj
+++ b/Forge.Data/Forge.Data.csproj
@@ -67,6 +67,7 @@
     <Compile Include="Models\TagModel.cs" />
     <Compile Include="Models\UserModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Services\CoreService.cs" />
     <Compile Include="Services\MappingService.cs" />
     <Compile Include="Services\DefinitionService.cs" />
     <Compile Include="Models\DefinitionTagModel.cs" />
