--- a/Forge.Web/package.json
+++ b/Forge.Web/package.json
@@ -5,12 +5,21 @@
   "main": "gulpfile.js",
   "devDependencies": {
     "babel-preset-es2015": "^6.24.1",
+    "babel-preset-react": "^6.24.1",
     "babel-preset-stage-2": "^6.24.1",
-    "babel-preset-react": "^6.23.0",
-    "gulp": "^3.9.1",
-    "gulp-babel": "^6.1.2",
-    "gulp-concat": "^2.6.1",
-    "gulp-plumber": "^1.1.0"
+    "babelify": "^7.3.0",
+    "browserify": "^14.3.0",
+    "gulp-replace": "^0.5.4",
+    "gulp-uglify": "^3.0.0",
+    "moment": "^2.18.1",
+    "react": "15.3.2",
+    "react-dom": "15.3.2",
+    "react-redux": "^5.0.5",
+    "redux": "^3.7.1",
+    "redux-thunk": "^2.2.0",
+    "vinyl-buffer": "^1.0.0",
+    "vinyl-source-stream": "^1.1.0",
+    "whatwg-fetch": "^2.0.3"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
