export Core/Controls

--- a/Forge.Web/Forge.Web.csproj
+++ b/Forge.Web/Forge.Web.csproj
@@ -222,6 +222,7 @@
     <Content Include="Scripts\Common\Components\Tags.jsx" />
     <Content Include="Scripts\Common\Components\Tooltip.jsx" />
     <Content Include="Scripts\Core\Components\Controls\Dictionary.jsx" />
+    <Content Include="Scripts\Core\Components\Controls\index.js" />
     <Content Include="Scripts\Core\Components\Controls\Select_Definition.jsx" />
     <Content Include="Scripts\Core\index.js" />
     <Content Include="Scripts\Designer\Components\Dialogs\Designer__LoadError.jsx" />
