req() Library and all components/actions

--- a/Forge.Web/Forge.Web.csproj
+++ b/Forge.Web/Forge.Web.csproj
@@ -225,9 +225,12 @@
     <Content Include="Scripts\Core\Components\Controls\index.js" />
     <Content Include="Scripts\Core\Components\Controls\Select_Definition.jsx" />
     <Content Include="Scripts\Core\index.js" />
-    <Content Include="Scripts\Designer\Components\Dialogs\Designer__LoadError.jsx" />
-    <Content Include="Scripts\Designer\Components\Dialogs\Designer__Groups.jsx" />
-    <Content Include="Scripts\Designer\Components\Stage\Designer__Link.jsx" />
+    <Content Include="Scripts\Designer\Components\Dialogs.jsx" />
+    <Content Include="Scripts\Designer\Components\List.jsx" />
+    <Content Include="Scripts\Designer\Components\Stage.jsx" />
+    <Content Include="Scripts\Designer\Components\Dialogs\LoadError.jsx" />
+    <Content Include="Scripts\Designer\Components\Dialogs\EditGroups.jsx" />
+    <Content Include="Scripts\Designer\Components\Link.jsx" />
     <Content Include="Scripts\Common\Components\Dialog.jsx" />
     <Content Include="Scripts\Common\Components\Expandable.jsx" />
     <Content Include="Scripts\Common\Components\Banner.jsx" />
@@ -242,22 +245,20 @@
     <Content Include="Scripts\Core\LifeCycle.js" />
     <Content Include="Scripts\Core\Reducer.js" />
     <Content Include="Scripts\Core\Utilities.js" />
-    <Content Include="Scripts\Designer\Components\Stage\Edit\Designer__Definition.jsx" />
-    <Content Include="Scripts\Designer\Components\Stage\Edit\Designer__DefinitionSettings.jsx" />
-    <Content Include="Scripts\Designer\Components\Stage\Edit\Designer__DefinitionTags.jsx" />
-    <Content Include="Scripts\Designer\Components\Stage\Edit\Designer__Rule.jsx" />
-    <Content Include="Scripts\Designer\Components\Stage\Edit\Designer__Tag.jsx" />
-    <Content Include="Scripts\Designer\Components\Stage\Designer__Preview.jsx" />
-    <Content Include="Scripts\Designer\Components\Stage\Designer__Recent.jsx" />
-    <Content Include="Scripts\Designer\Components\Dialogs\Designer__Dialogs.jsx" />
-    <Content Include="Scripts\Designer\Components\List\Designer__List.jsx" />
-    <Content Include="Scripts\Designer\Components\List\Designer__Search.jsx" />
-    <Content Include="Scripts\Designer\Components\List\Designer__Settings.jsx" />
+    <Content Include="Scripts\Designer\Components\Stage\Edit\Definition.jsx" />
+    <Content Include="Scripts\Designer\Components\Stage\Edit\DefinitionSettings.jsx" />
+    <Content Include="Scripts\Designer\Components\Stage\Edit\DefinitionTags.jsx" />
+    <Content Include="Scripts\Designer\Components\Stage\Edit\Rule.jsx" />
+    <Content Include="Scripts\Designer\Components\Stage\Edit\Tag.jsx" />
+    <Content Include="Scripts\Designer\Components\Stage\Preview.jsx" />
+    <Content Include="Scripts\Designer\Components\Stage\Recent.jsx" />
+    <Content Include="Scripts\Designer\Components\List\Search.jsx" />
+    <Content Include="Scripts\Designer\Components\List\Settings.jsx" />
     <Content Include="Scripts\index.js" />
-    <Content Include="Scripts\Library\Components\Library_Filters.jsx" />
-    <Content Include="Scripts\Library\Components\Library_Controls.jsx" />
-    <Content Include="Scripts\Library\Components\Library_Summary.jsx" />
-    <Content Include="Scripts\Library\Components\Library_List.jsx" />
+    <Content Include="Scripts\Library\Components\Filters.jsx" />
+    <Content Include="Scripts\Library\Components\Controls.jsx" />
+    <Content Include="Scripts\Library\Components\Summary.jsx" />
+    <Content Include="Scripts\Library\Components\List.jsx" />
     <Content Include="serviceworker.js" />
     <Content Include="Scripts\Store.js" />
     <Content Include="Scripts\Common\Actions.js" />
@@ -269,11 +270,11 @@
     <Content Include="Scripts\Core\Components\Definition.jsx" />
     <Content Include="Scripts\Core\Settings.js" />
     <Content Include="Scripts\Designer\Components\Designer.jsx" />
-    <Content Include="Scripts\Designer\Components\Stage\Designer__Menu.jsx" />
+    <Content Include="Scripts\Designer\Components\Stage\Menu.jsx" />
     <Content Include="Scripts\Designer\Actions.js" />
     <Content Include="Scripts\Designer\Reducer.js" />
     <Content Include="Scripts\Library\Components\Library.jsx" />
-    <Content Include="Scripts\Library\Components\Library_Game.jsx" />
+    <Content Include="Scripts\Library\Components\Game.jsx" />
     <Content Include="Scripts\Library\Reducer.js" />
     <Content Include="Scripts\Library\Actions.js" />
     <Content Include="Scripts\Vendor\enzyme-2.7.1.js" />
@@ -332,9 +333,8 @@
     <Content Include="Styles\Components\_headings.scss" />
     <Content Include="Styles\Components\_tabs.scss" />
     <Content Include="Styles\Components\_designer.scss" />
-    <Content Include="Scripts\Designer\Components\Designer__Tabs.jsx" />
-    <Content Include="Scripts\Designer\Components\Designer__Summary.jsx" />
-    <Content Include="Scripts\Designer\Components\Stage\Designer__Stage.jsx" />
+    <Content Include="Scripts\Designer\Components\Tabs.jsx" />
+    <Content Include="Scripts\Designer\Components\Summary.jsx" />
     <Content Include="Styles\Components\_fields.scss" />
     <None Include="Properties\PublishProfiles\verspyre.com - Web Deploy.pubxml" />
     <Content Include="Styles\Components\_banners.scss" />
