--- a/Forge.Web/Views/Web.config
+++ b/Forge.Web/Views/Web.config
@@ -18,6 +18,7 @@
         <add namespace="System.Web.Optimization" />
         <add namespace="System.Web.Routing" />
         <add namespace="Forge.Web" />
+        <add namespace="Forge.Web.Utilities"/>
       </namespaces>
     </pages>
   </system.web.webPages.razor>
