--- a/Forge.Web/Forge.Web.csproj
+++ b/Forge.Web/Forge.Web.csproj
@@ -233,6 +233,7 @@
     <Content Include="Scripts\Common\Components\Tooltip.jsx" />
     <Content Include="Scripts\Core\Components\Controls\Dictionary.jsx" />
     <Content Include="Scripts\Core\Components\Controls\index.js" />
+    <Content Include="Scripts\Core\Components\Controls\Formula.jsx" />
     <Content Include="Scripts\Core\Components\Controls\Select_Definition.jsx" />
     <Content Include="Scripts\Core\index.js" />
     <Content Include="Scripts\Designer\Components\Dialogs.jsx" />
