--- a/Forge.Web/Forge.Web.csproj
+++ b/Forge.Web/Forge.Web.csproj
@@ -228,6 +228,7 @@
     <Content Include="Scripts\Builder\Components\Builder.jsx" />
     <Content Include="Scripts\Account\Actions.js" />
     <Content Include="Scripts\Account\Reducer.js" />
+    <Content Include="Scripts\Common\Components\Shrinky.jsx" />
     <Content Include="Scripts\Common\Components\Button.jsx" />
     <Content Include="Scripts\Common\Components\Tags.jsx" />
     <Content Include="Scripts\Common\Components\Tooltip.jsx" />
